[package]
name = "img-fuse"
version = "0.2.0"
authors = ["Caio O Campos <caio.campos1204@gmail.com.br>"]
edition = "2018"

[dependencies]
glob = "^0.3.0"
rand = "^0.8.5"
serde = { version = "^1.0.138", features = ["derive"] }
serde_json = "^1.0.82"
image = "^0.24.2"
resvg = "^0.23.0"
tiny-skia = "^0.6.6"
usvg = { version = "^0.26.0", default-features = false }
handlebars = "^4.3.1"
